commit webblocks 4 en 5
Nog bezig met het mobile design van opdracht 5

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,9 @@
         "geel",
         "groen",
         "lichtblauw",
-        "roze"
+        "Opdracht",
+        "paars",
+        "roze",
+        "Webblocks"
     ]
 }
