commit Opdracht 5 en gedeeltelijk 7

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,12 @@
 {
     "cSpell.words": [
         "blauw",
+        "donker",
         "donkerrood",
         "geel",
         "groen",
         "lichtblauw",
+        "lucht",
         "Opdracht",
         "paars",
         "roze",
